Remove crap from other project

--- a/examples/points1/Makefile
+++ b/examples/points1/Makefile
@@ -21,7 +21,7 @@ points1: $(OBJS)
 	@echo "  LINK    $@"
 	@$(CC) $^ $(LDFLAGS) -o $@
 
--include $(patsubst %.o,.%.d,$(OBJS) fuse.o ghost.o)
+-include $(patsubst %.o,.%.d,$(OBJS))
 
 %.o: %.c
 	@echo "  CC      $@"
