Add another example program to draw a triangle
Using it to help enhance rasterization algorithm.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,9 +1,11 @@
 all:
 	make -C ./points1
 	make -C ./triangle1
+	make -C ./triangle2
 
 clean:
 	make clean -C ./points1
 	make clean -C ./triangle1
+	make clean -C ./triangle2
 
 .PHONY: all clean
