--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,10 +2,12 @@ all:
 	make -C ./points1
 	make -C ./triangle1
 	make -C ./triangle2
+	make -C ./texture1
 
 clean:
 	make clean -C ./points1
 	make clean -C ./triangle1
 	make clean -C ./triangle2
+	make clean -C ./texture1
 
 .PHONY: all clean
