examples: Add NeHe lesson 10
Adapted code from
http://nehe.gamedev.net/tutorial/loading_and_moving_through_a_3d_world/22003/

There are rasterization and texture mapping issues to fix.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,11 +3,13 @@ all:
 	make -C ./triangle1
 	make -C ./triangle2
 	make -C ./texture1
+	make -C ./nehe
 
 clean:
 	make clean -C ./points1
 	make clean -C ./triangle1
 	make clean -C ./triangle2
 	make clean -C ./texture1
+	make clean -C ./nehe
 
 .PHONY: all clean
