--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,6 +4,7 @@ all:
 	make -C ./triangle2
 	make -C ./texture1
 	make -C ./nehe
+	make -C ./depthbug
 
 clean:
 	make clean -C ./points1
@@ -11,5 +12,6 @@ clean:
 	make clean -C ./triangle2
 	make clean -C ./texture1
 	make clean -C ./nehe
+	make clean -C ./depthbug
 
 .PHONY: all clean
